Update payroll-service & notification-service